# swissh

./: .gitignore  Cargo.toml  id_ed25519  id_ed25519.pub
jstx/: index.js  package-lock.json  package.json
src/: cli.rs  constant.rs  lib.rs  main.rs  types.rs
