[package]
name = "swissh"
version = "0.1.0"
edition = "2021"

[dependencies]
smoldot = "0.18.0"
clap = { version = "4.1.6", features = ["derive"] }
sp-core = "34.0.0"
sp-runtime = "39.0.1"
ssh-key = "0.6.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
home = "0.5.3"
bs58 = "0.5.1"
blake2-rfc = "0.2.18"
hex = "0.4.3"
dirs = "5.0.1"
reqwest = { version = "0.12.8", features = ["blocking"] }
