[package]
name = "swissh"
version = "0.1.0"
edition = "2021"

[dependencies]
smoldot = { version = "0.18.0", optional = true }
clap = { version = "4.1.6", features = ["derive"] }
sp-core = { version = "34.0.0", optional = true }
sp-runtime = { version = "39.0.1", optional = true }
ssh-key = "0.6.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
home = "0.5.3"
bs58 = "0.5.1"
blake2-rfc = "0.2.18"
hex = "0.4.3"
dirs = "5.0.1"
reqwest = { version = "0.12.8", features = ["blocking"] }
subxt = { version = "0.37", default-features = false, features = ["substrate-compat", "native", "unstable-light-client"], optional = true }
ed25519-dalek = "2.1.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
sha256 = "1.5.0"

[features]
default = ["balance", "transfer"]
balance = ["smoldot", "sp-core", "sp-runtime", "subxt"]
transfer = ["smoldot", "sp-core", "sp-runtime", "subxt"]
export-private-key = ["sp-core", "subxt"]
